--- a/css/work-history.css
+++ b/css/work-history.css
@@ -1,3 +1,30 @@
+:root {
+    --bs-blue: #0d6efd;
+    --bs-indigo: #6610f2;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+}
+
 * {
     box-sizing: border-box;
     margin: 1em;
@@ -19,7 +46,7 @@ p {
 
 .year {
     font-weight: bold;
-    color: aquamarine;
+    color: antiquewhite;
 }
 
 .location {
@@ -31,10 +58,50 @@ p {
     background-color: #629BCD;
 }
 
+#vidd {
+    color: #f8f8ff;
+}
+
+#vidt {
+    color: #f0fff0;
+}
+
 #lyft {
     background-color: #FF00E2;
 }
 
+#lydd {
+    color: #6c757d;
+}
+
+#lyftt {
+    color: #228b22;
+}
+
+#njangt {
+    color: #008000;
+}
+
+#cangt {
+    color: #faebd7;
+}
+
+#angt {
+    color: #ffebcd;
+}
+
 #apt {
     background-color: #1B5189;
+}
+
+#atpt {
+    color: #EDE432;
+}
+
+#aptt {
+    color: #00FFFF;
+}
+
+#mcdt {
+    color: navy;
 }
