--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,13 @@ h2 {
     font-size: 40px;
 }
 
+ul {
+    list-style-type: none;
+margin: 0;
+padding: 0;
+overflow: hidden;
+}
+
 .main-page {
     margin-top: 1em;
     display: block;
