--- a/css/index.css
+++ b/css/index.css
@@ -39,19 +39,20 @@ overflow: hidden;
     background-color: #BA152F;
     display: flex;
     justify-content: center;
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
 }
 
 .emblem-right {
     background-color: #D8AF36;
     display: flex;
     justify-content: center;
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
 }
+
+/*.emblem {*/
+/*    display: flex;*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*    object-fit: contain;*/
+/*}*/
 
 .link {
     display: flex;
