completed main page except for fine tuning

--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,30 @@
 h1 {
     color: black;
     text-align: center;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 h2 {
     color: #006AFF;
     text-align: center;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 ul {
     list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .main-page {
     margin-top: 1em;
     display: block;
     background-color: olivedrab;
+}
+
+.contact-links {
+    margin-bottom: 1em;
 }
 
 .contact {
@@ -35,6 +39,10 @@ overflow: hidden;
     color: #00008b;
 }
 
+.name {
+    text-align: center;
+}
+
 .emblem-left {
     background-color: #BA152F;
     display: flex;
@@ -45,30 +53,20 @@ overflow: hidden;
     background-color: #D8AF36;
     display: flex;
     justify-content: center;
-<<<<<<< HEAD
 }
 
 .emblem {
     height: 100%;
     width: 100%;
     object-fit: contain;
-=======
->>>>>>> fa2d6bb82c5db2bbc501d78003c1a17629cfb156
 }
 
-/*.emblem {*/
-/*    display: flex;*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*    object-fit: contain;*/
-/*}*/
-
-.link {
-    display: flex;
-    justify-content: center;
+.reference-links {
+    text-align: center;
 }
 
 .sand {
+    width: 100%;
     background-color: #F2E8C9;
 }
 
@@ -93,4 +91,4 @@ overflow: hidden;
     height: 200px;
     width: 200px;
     border-radius: 50%;
-  }
+}
