removed hidden attribute from counter

--- a/css/index.css
+++ b/css/index.css
@@ -70,9 +70,9 @@ ul {
     background-color: #F2E8C9;
 }
 
-.counter {
-    visibility: hidden;
-}
+/*.counter {*/
+/*    visibility: hidden;*/
+/*}*/
 
 #mtd {
     color: black;
