--- a/css/development.css
+++ b/css/development.css
@@ -2,6 +2,7 @@ body {
     background-image: url("/Images/computer_background.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
 }
 
 h2 {
