--- a/css/awards_decs.css
+++ b/css/awards_decs.css
@@ -25,6 +25,7 @@ h2 {
     display: flex;
     justify-content: center;
     width: 100vw;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
 }
@@ -45,10 +46,10 @@ h2 {
     gap: 16px;
 }
 
-section img {
+.certs img {
     width: 100%;
-    max-width: 500px;
-    height: 400px;
+    max-width: 600px;
+    height: 500px;
     object-fit: cover;
     border: 2px solid black;
     border-radius: 10px;
