centered images on academic page

--- a/css/academic.css
+++ b/css/academic.css
@@ -51,6 +51,12 @@ img {
     padding-right: 10px;
 }
 
+.ctrimg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .codeup {
     background-color: #7CB342;
 }
