debugged some work history

--- a/css/work-history.css
+++ b/css/work-history.css
@@ -88,6 +88,14 @@ p {
     color: #f0fff0;
 }
 
+#uberdd {
+    color: red;
+}
+
+#ubertt {
+    color: red;
+}
+
 #lyft {
     background-color: #FF00E2;
 }
