--- a/css/awards_decs.css
+++ b/css/awards_decs.css
@@ -21,6 +21,10 @@ h2 {
     font-size: 40px;
 }
 
+hr {
+    border: 3px solid #172C7F;
+}
+
 .ribbon-section {
     display: flex;
     justify-content: center;
@@ -28,10 +32,6 @@ h2 {
     max-width: 100vw;
     margin: 0;
     padding: 0;
-}
-
-.ribbons-list {
-    text-align: center;
 }
 
 .certs {
@@ -50,9 +50,10 @@ h2 {
     width: 100%;
     max-width: 600px;
     height: 500px;
-    object-fit: cover;
+    object-fit: contain;
     border: 2px solid black;
     border-radius: 10px;
+    text-align: center;
 }
 
 section::after {
