added marine corps veteran icon to main index page and styled

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,7 @@
 body {
     background-color: deepskyblue;
     font-size: 30px;
+    font-weight: bold;
     color: #333;
     line-height: 1.8em;
     margin: auto;
