--- a/css/awards_decs.css
+++ b/css/awards_decs.css
@@ -34,6 +34,16 @@ hr {
     padding: 0;
 }
 
+.ribbons-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw;
+    padding: 10px 5px;
+    margin: 0 auto;
+}
+
 .certs {
     display: flex;
     flex-direction: row;
@@ -54,6 +64,16 @@ hr {
     border: 2px solid black;
     border-radius: 10px;
     text-align: center;
+}
+
+.nonphoto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw;
+    padding: 10px 5px;
+    margin: 0 auto;
 }
 
 section::after {
