--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,15 @@ ul {
     overflow: hidden;
 }
 
+.name {
+    font-size: 75px;
+    text-align: center;
+}
+
+.title {
+    font-size: 40px;
+}
+
 .main-page {
     margin-top: 1em;
     display: block;
@@ -37,10 +46,6 @@ ul {
 .context {
     font-weight: bold;
     color: #00008b;
-}
-
-.name {
-    text-align: center;
 }
 
 .emblem-left {
