--- a/css/encoding.css
+++ b/css/encoding.css
@@ -18,6 +18,15 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: yellow;
+    text-align: center;
+}
+
 .form-control {
     display: block;
     width: 98%;
