--- a/css/development.css
+++ b/css/development.css
@@ -27,6 +27,12 @@ li {
     font-weight: bold;
 }
 
+li a:hover {
+    color: red;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 a {
     color: khaki;
     font-size: 20px;
@@ -40,7 +46,7 @@ a:hover {
 }
 
 a:visited {
-    color: blue;
+    color: green;
     font-size: 20px;
     font-weight: bold;
 }
@@ -49,4 +55,62 @@ a:active {
     color: green;
     font-size: 20px;
     font-weight: bold;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    max-width: 100vw;
+}
+
+.col1 {
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-width: 500px;
+}
+
+.codeup-proj {
+    color: orange;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.col2 {
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-width: 500px;
+}
+
+.fcc {
+    color: orange;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.col3 {
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-width: 500px;
+}
+
+.outside {
+    color: orange;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        max-width: 100vw;
+    }
 }
