--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,10 @@
 :root {
     --h2-blue: #006AFF;
-    --background-olivedrab: olivedrab;
+    --background1: olivedrab;
     --USMCscarlet: #BA152F;
     --USMCgold: #D8AF36;
     --sand: #F2E8C9;
+    --navy: #00008b;
 }
 
 h1 {
@@ -13,7 +14,7 @@ h1 {
 }
 
 h2 {
-    color: #006AFF;
+    color: var(--h2-blue);
     text-align: center;
     font-size: 20px;
 }
@@ -37,7 +38,7 @@ ul {
 .main-page {
     margin-top: 1em;
     display: block;
-    background-color: olivedrab;
+    background-color: var(--background1);
 }
 
 .contact-links {
@@ -48,7 +49,7 @@ ul {
     margin: 0;
     text-align: center;
     font-weight: bold;
-    color: red;
+    color: var(--USMCscarlet);
 }
 
 .hr1 {
@@ -63,17 +64,17 @@ ul {
 
 .context {
     font-weight: bold;
-    color: #00008b;
+    color: var(--navy);
 }
 
 .emblem-left {
-    background-color: #BA152F;
+    background-color: var(--USMCscarlet);
     display: flex;
     justify-content: center;
 }
 
 .emblem-right {
-    background-color: #D8AF36;
+    background-color: var(--USMCgold);
     display: flex;
     justify-content: center;
 }
@@ -90,7 +91,7 @@ ul {
 
 .sand {
     width: 100%;
-    background-color: #F2E8C9;
+    background-color: var(--sand);
 }
 
 .skills {
@@ -118,7 +119,7 @@ ul {
 }
 
 #skills {
-    color: #006AFF;
+    color: var(--h2-blue);
     text-align: center;
     font-size: 30px;
 }
