--- a/css/index.css
+++ b/css/index.css
@@ -147,3 +147,19 @@ ul {
 .counter {
     height: 15px;
 }
+
+@media screen and (max-width: 1040px) {
+    .space {
+        margin: 0 1em;
+    }
+
+    .name {
+        font-size: 50px;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .name {
+        font-size: 25px;
+    }
+}
