--- a/css/guess.css
+++ b/css/guess.css
@@ -1,5 +1,10 @@
-* {
-    background-color: deepskyblue;
-    margin: .5em auto;
+#statement {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 2em auto;
+}
+
+#answer {
+    display: none;
 }
 
