--- a/css/index.css
+++ b/css/index.css
@@ -123,9 +123,10 @@ ul {
 
 .vtad {
     display: flex;
+    justify-content: center;
     align-items: center;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 35px;
 }
 
 .counter {
