added image and modified index

--- a/css/index.css
+++ b/css/index.css
@@ -129,6 +129,14 @@ ul {
     font-size: 35px;
 }
 
+.vttext {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 25px;
+}
+
 .counter {
     height: 15px;
 }
