fixed issues with images and css

--- a/css/fcc-respwebdes.css
+++ b/css/fcc-respwebdes.css
@@ -1,6 +1,6 @@
 body {
     display: block;
-    background-image: url("Images/usmc1sttanks.jpeg");
+    background-image: url("../../Ralph-s-Projects/ResponsiveSite/img/usmc1sttanks.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
 }
