--- a/css/recognition.css
+++ b/css/recognition.css
@@ -1,6 +1,6 @@
 body {
     display: block;
-    background-image: url("Images/secdef.jpeg");
+    background-image: url("../../Ralph-s-Projects/ResponsiveSite/img/secdef.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
 }
