--- a/css/appreciation.css
+++ b/css/appreciation.css
@@ -1,6 +1,6 @@
 body {
     display: block;
-    background-image: url(Images/presidentialseal.jpg);
+    background-image: url(../../Ralph-s-Projects/ResponsiveSite/img/presidentialseal.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
