--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,45 @@
 :root {
-    --h2-blue: #006AFF;
-    --background1: olivedrab;
-    --USMCscarlet: #BA152F;
-    --USMCgold: #D8AF36;
-    --sand: #F2E8C9;
-    --navy: #00008b;
-    --small-screen-titles: ;
+    --clr-h2-blue: #006AFF;
+    --clr-USMCscarlet: #BA152F;
+    --clr-USMCgold: #D8AF36;
+    --clr-sand: #F2E8C9;
+    --clr-navy: #00008b;
+    --clr-bg: olivedrab;
+    --clr-title: black;
+    --clr-accent-400: hsl(12, 88%, 59%);
+    --clr-accent-100: hsl(13, 100%, 96%);
+    --clr-nav: #A0A0B8;
+    --clr-primary-400: hsl(228, 39%, 23%);
+    --clr-neutral-900: hsl(232, 12%, 13%);
+    --clr-neutral-100: hsl(0, 0%, 100%);
+    --ff-primary: 'Be Vietnam Pro', sans-serif;
+    --ff-body: var(--ff-primary);
+    --ff-heading: var(--ff-primary);
+    --fw-regular: 400;
+    --fw-semi-bold: 500;
+    --fw-bold: 700;
+    --fs-300: .8125rem;
+    --fs-400: .875rem;
+    --fs-500: .9375rem;
+    --fs-600: 1rem;
+    --fs-700: 1.875rem;
+    --fs-800: 2.5rem;
+    --fs-900: 3.5rem;
+    --fs-body: var(--fs-400);
+    --fs-primary-heading: var(--fs-800);
+    --fs-secondary-heading: var(--fs-700);
+    --fs-nav: var(--fs-500);
+    --fs-button: var(--fs-300);
 }
 
 h1 {
-    color: black;
+    color: var(--clr-title);
     text-align: center;
     font-size: 30px;
 }
 
 h2 {
-    color: var(--h2-blue);
+    color: var(--clr-h2-blue);
     text-align: center;
     font-size: 20px;
 }
@@ -46,7 +70,7 @@ ul {
 .main-page {
     margin-top: 1em;
     display: block;
-    background-color: var(--background1);
+    background-color: var(--clr-bg);
 }
 
 .contact-links {
@@ -57,32 +81,32 @@ ul {
     margin: 0;
     text-align: center;
     font-weight: bold;
-    color: var(--USMCscarlet);
+    color: var(--clr-USMCscarlet);
 }
 
 .hr1 {
-    border: 3px solid var(--USMCscarlet);
+    border: 3px solid var(--clr-USMCscarlet);
     opacity: 1;
 }
 
 .hr2 {
-    border: 3px solid var(--USMCgold);
+    border: 3px solid var(--clr-USMCgold);
     opacity: 1;
 }
 
 .context {
     font-weight: bold;
-    color: var(--navy);
+    color: var(--clr-navy);
 }
 
 .emblem-left {
-    background-color: var(--USMCscarlet);
+    background-color: var(--clr-USMCscarlet);
     display: flex;
     justify-content: center;
 }
 
 .emblem-right {
-    background-color: var(--USMCgold);
+    background-color: var(--clr-USMCgold);
     display: flex;
     justify-content: center;
 }
@@ -99,11 +123,11 @@ ul {
 
 .sand {
     width: 100%;
-    background-color: var(--sand);
+    background-color: var(--clr-sand);
 }
 
 .skills-title {
-    color: var(--h2-blue);
+    color: var(--clr-h2-blue);
     text-align: center;
     font-size: 30px;
 }
@@ -111,7 +135,7 @@ ul {
 .skills {
     margin: 0;
     font-weight: bold;
-    color: var(--sand);
+    color: var(--clr-sand);
 }
 
 .buttons {
@@ -151,8 +175,8 @@ ul {
 }
 
 .no-hate {
-    background-color: #006AFF;
-    color: black;
+    background-color: var(--clr-h2-blue);
+    color: var(--clr-title);
     font-weight: bold;
     display: flex;
     justify-content: flex-start;
@@ -166,7 +190,7 @@ ul {
 }
 
 #mtd {
-    color: black;
+    color: var(--clr-title);
     font-weight: bold;
     font-size: 15px;
     justify-content: center;
@@ -182,8 +206,8 @@ ul {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 200px;
-    width: 200px;
+    max-height: 200px;
+    max-width: 200px;
     border-radius: 50%;
 }
 
@@ -192,8 +216,8 @@ ul {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 200px;
-    width: 200px;
+    max-height: 200px;
+    max-width: 200px;
     border-radius: 50%;
 }
 
@@ -222,16 +246,20 @@ ul {
     .name {
         font-size: 25px;
     }
+
     .title {
-        color: var(--navy);
+        color: var(--clr-navy);
     }
+
     .skills-title {
-        color: var(--navy);
+        color: var(--clr-navy);
     }
+
     .ref-title a {
-        color: var(--navy);
+        color: var(--clr-navy);
     }
+
     p a {
-        color: var(--navy);
+        color: var(--clr-navy);
     }
 }
