--- a/css/index.css
+++ b/css/index.css
@@ -39,15 +39,13 @@ h1 {
 }
 
 h2 {
-    color: var(--clr-h2-blue);
+    color: var(--clr-nav);
     text-align: center;
     font-size: 20px;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+h3 {
+    color: khaki;
 }
 
 ul {
@@ -63,6 +61,11 @@ img {
     max-height: 500px;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .name {
     font-size: 75px;
     text-align: center;
@@ -143,6 +146,11 @@ img {
     color: var(--clr-sand);
 }
 
+/*.ref-title {*/
+/*    background: var(--clr-h2-blue);*/
+/*    color: black;*/
+/*}*/
+
 .buttons {
     display: flex;
     justify-content: center;
@@ -184,7 +192,7 @@ img {
     color: var(--clr-title);
     font-weight: bold;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100px;
     height: 100px;
     position: absolute;
