--- a/css/aircraft.css
+++ b/css/aircraft.css
@@ -44,6 +44,13 @@ h1 {
     justify-content: center;
     font-weight: bold;
     font-size: 60px;
+    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
+}
+
+a {
+    color: var(--BlueText);
+    text-decoration: none;
+    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
 p {
@@ -51,6 +58,7 @@ p {
     justify-content: space-between;
     color: var(--APTBlue);
     font-size: 25px;
+    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
 img {
