--- a/css/galaxy.css
+++ b/css/galaxy.css
@@ -44,6 +44,13 @@ h1 {
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
+h2 {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 60px;
+    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;}
+
 h3 {
     display: flex;
     justify-content: center;
