updated AMCM page

--- a/css/tower.css
+++ b/css/tower.css
@@ -28,7 +28,11 @@
 }
 
 body {
-    background-color: var(--ANGSky);
+    background-image: url("../Images/Tower.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 h1 {
@@ -39,18 +43,28 @@ h1 {
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
-h3 {
+h2 {
     display: flex;
     justify-content: center;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 50px;
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
 p {
     display: flex;
     justify-content: space-between;
-    color: var(--APTBlue);
+    color: var(--LyftPink);
     font-size: 20px;
-    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
+    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px black;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    max-height: fit-content;
+    border: 5px solid var(--APTBlue);
+    border-radius: 25px;
+    padding: 20px;
+    margin: 20px;
 }
