--- a/css/aircraft.css
+++ b/css/aircraft.css
@@ -47,6 +47,14 @@ h1 {
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
+h2 {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 50px;
+    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
+}
+
 a {
     color: var(--BlueText);
     text-decoration: none;
