--- a/css/flyingfortress.css
+++ b/css/flyingfortress.css
@@ -28,22 +28,19 @@
 }
 
 body {
-    background-color: var(--ANGSky);
+    background-image: url('../Images/B-17G.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-div {
-    background-color: var(--background);
-    border: 5px solid var(--APTBlue);
-    border-radius: 25px;
-    padding: 20px;
-    margin: 20px;
-}
-
+/*I used a text-shadow property to make the text pop and allow all text to be read over the background photo of the C-5.  The syntax is text-shadow:  offset-x offset-y blur-radius color;.  */
 h1 {
     display: flex;
     justify-content: center;
     font-weight: bold;
-    font-size: 60px;
+    font-size: 80px;
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
@@ -51,29 +48,29 @@ h2 {
     display: flex;
     justify-content: center;
     font-weight: bold;
+    font-size: 60px;
+    text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;}
+
+h3 {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
     font-size: 50px;
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
-a {
-    color: var(--BlueText);
-    text-decoration: none;
-    font-size: 30px;
+h4 {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 45px;
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
 p {
     display: flex;
     justify-content: space-between;
-    color: var(--APTBlue);
-    font-size: 25px;
+    color: var(--LyftPink);
+    font-size: 40px;
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
-}
-
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 100px;
-    width: 200px;
 }
