--- a/css/aircraft.css
+++ b/css/aircraft.css
@@ -36,7 +36,7 @@ div {
     border: 5px solid var(--APTBlue);
     border-radius: 25px;
     padding: 20px;
-    margin: 20px;
+    margin: 20px 0;
 }
 
 h1 {
@@ -58,7 +58,7 @@ h2 {
 a {
     color: var(--BlueText);
     text-decoration: none;
-    font-size: 30px;
+    font-size: 40px;
     text-shadow: -1px -1px 2px black, 0 0 25px white, 0 0 5px whitesmoke;
 }
 
@@ -79,15 +79,17 @@ img {
 }
 
 .container {
+    margin: 0;
+    width: 100%;
     display: grid;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
     justify-content: center;
     align-items: center;}
 
 .sec2 {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     /*justify-content: center;*/
     align-items: center;
