--- a/css/work-history.css
+++ b/css/work-history.css
@@ -80,6 +80,7 @@ p {
 #ccp {
     background-color: var(--UberBlack);
     border: 2px solid var(--VATitle);
+    text-shadow: 2px 2px var(--VATitle);
 }
 
 #ccpt {
